# 2talk

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .env.example  README.md  alembic.ini  pyproject.toml  requirements.txt
backend/alembic/: README.md  env.py
backend/alembic/versions/: 20260718_0001_database_foundation.py  20260718_0002_durable_ai_execution.py
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  exceptions.py  factory.py  models.py  prompt_loader.py  provider.py  validation.py
backend/app/api/: auth.py  database.py  dependencies.py  errors.py  main.py
backend/app/auth/: __init__.py  tokens.py
backend/app/config/: settings.py
backend/app/database/: __init__.py  base.py  session.py
backend/app/models/: __init__.py  attempt.py  conversation.py  delivery.py  enums.py  guidance.py  invitation.py  mediation_job.py  message.py  participant.py  safety.py  session.py  summary.py
backend/app/repositories/: README.md  __init__.py  ai_mediation_jobs.py  ai_processing_attempts.py  base.py  conversation_summaries.py  conversations.py  invitations.py  message_deliveries.py  messages.py  participant_sessions.py  participants.py  private_guidance.py  safety_events.py
backend/app/services/: README.md  __init__.py  ai_mediation_orchestration_service.py  conversation_service.py  exceptions.py  invitation_service.py  message_lifecycle_service.py  participant_content_service.py  participant_service.py  summary_service.py
backend/app/workers/: README.md  __init__.py  (+1 more)
backend/tests/: conftest.py
(+67 files in other folders)
